use <script...latest

--- a/AsciiMath.html
+++ b/AsciiMath.html
@@ -4,7 +4,7 @@
   <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
   <title>MathJax: AsciiMath</title>
 
-  <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=AM_CHTML" ></script>
+  <script async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=AM_CHTML" ></script>
 
 </head>
 <body>
