--- a/getting-started.html
+++ b/getting-started.html
@@ -8,18 +8,8 @@
     MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
   </script>
 
-  <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-MML-AM_CHTML" ></script>
-    <!--
+  <script async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
-      http://docs.mathjax.org/en/latest/start.html comes with the following WARNING:
-
-        The TeX-MML-AM_CHTML configuration is one of the most general (and thus
-        largest) combined configuration files.  We list it here because it
-        will quickly get you started using MathJax. It is probably not the most
-        efficient configuration for your purposes and other combined
-        configuration files are available. 
-
-    -->
 </head>
 <body>
 
